syntax="proto3";

package torrent_peer;

option go_package="torrent_peer/torrent_peerpb";

message Message{
    int32 length = 1;
    uint32 id = 2;
    bytes payload = 3;
}

message HandshakeRequest{
    uint32 length_pstr = 1;
    string pstr = 2;
    bytes reserved_bytes = 3;
    bytes info_hash = 4;
    bytes peer_id = 5;
}
message HandshakeResponse{
    uint32 length_pstr = 1;
    string pstr = 2;
    bytes reserved_bytes = 3;
    bytes info_hash = 4;
    bytes peer_id = 5;
}

message SendMessageRequest{
    Message message = 1;
}
message SendMessageResponse{
    Message message = 1;
}

service DownloadService{

    // Handshake torrent peer
    rpc Handshake(HandshakeRequest) returns (HandshakeResponse){};

    // Send messages to torrent peer
    rpc SendMessage(stream SendMessageRequest) returns (stream SendMessageResponse){};
}